<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UserFragment">


    <com.android.system.talker.view.InputItemView
        android:id="@+id/userNameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/user_name" />


    <com.android.system.talker.view.InputItemView
        android:id="@+id/baseMenuLocationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/base_menu_location" />

    <com.android.system.talker.view.InputItemView
        android:id="@+id/baseCloneLocationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/base_clone_location" />


    <com.android.system.talker.view.InputItemView
        android:id="@+id/appLocationXEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/app_location_x" />


    <com.android.system.talker.view.InputItemView
        android:id="@+id/appLocationYEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/app_location_y" />

    <CheckBox
        android:id="@+id/dailyGiftCb"
        android:text="每日优惠"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/activeGiftCb"
        android:text="每日登录礼物"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <CheckBox
        android:id="@+id/agreementGiftCb"
        android:text="协议礼物"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/saveBtn"
        android:hint="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>