<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TaskFragment">

    <com.android.system.talker.view.InputItemView
        android:id="@+id/baseMenuLocationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/base_menu_location" />

    <com.android.system.talker.view.InputItemView
        android:id="@+id/baseCloneLocationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_str="@string/base_clone_location" />

    <Button
        android:id="@+id/saveBtn"
        android:hint="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>